fix: ajuste de exibição de listas para usuários aluno e professor